--- a/addon/manifest.json
+++ b/addon/manifest.json
@@ -25,17 +25,10 @@
     "browser_style": true
   },
 
-  "page_action": {
-    "default_icon": {
-      "48": "icons/streamlink48x48.png",
-      "96": "icons/streamlink96x96.png"
-    },
-    "default_title": "__MSG_extensionName__",
-    "browser_style": true
-  },
-
   "options_ui": {
-    "page": "options.html"
+    "page": "options.html",
+    "browser_style": true,
+    "open_in_tab": true
   },
 
   "permissions": [
