--- a/addon/manifest.json
+++ b/addon/manifest.json
@@ -28,7 +28,7 @@
   "options_ui": {
     "page": "options.html",
     "browser_style": true,
-    "open_in_tab": true
+    "open_in_tab": false
   },
 
   "permissions": [
